objects/wkcc__TriggerSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to declaratively enable/disable custom triggers.</description>
    <fields>
        <fullName>wkcc__IsAfterDeleteDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable the after delete custom code for the Domain trigger class in this record.</description>
        <label>After Delete Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IsAfterInsertDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable the after insert custom code for the Domain trigger class in this record.</description>
        <label>After Insert Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IsAfterUndeleteDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable the after undelete custom code for the Domain trigger class in this record.</description>
        <label>After Undelete Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IsAfterUpdateDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable the after update custom code for the Domain trigger class in this record.</description>
        <label>After Update Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IsBeforeDeleteDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable the before delete custom code for the Domain trigger class in this record.</description>
        <label>Before Delete Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IsBeforeInsertDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable the before insert custom code for the Domain trigger class in this record.</description>
        <label>Before Insert Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IsBeforeUpdateDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable the before update custom code for the Domain trigger class in this record.</description>
        <label>Before Update Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkcc__IsDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to enable/disable all custom code for the Domain trigger class in this record.</description>
        <inlineHelpText>Check this to disable the trigger</inlineHelpText>
        <label>Disabled?</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>